# congenial-meme

./: Cargo.toml  readme.md
src/: handlers.rs  lib.rs  main.rs  tasks.rs
templates/: index.html.tera
templates/layouts/: base.html
templates/partials/: progress.html.tera
