[package]
name = "poem-oai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
futures-util = "0.3.19"
poem = "1.3.50"
poem-openapi = { version = "2.0.21",  features = ["swagger-ui"]}
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]