[package]
name = "poem-oai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
futures-util = "0.3.19"
poem = { version = "1.3.50", features = ["websocket", "sse"]}
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.7"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
tera = "1.17.1"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
