[package]
name = "transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
futures-util = "0.3.19"
poem = { version = "1.3.50", features = ["websocket", "multipart"]}
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time", "process", "io-util"] }
tokio-stream = "0.1.7"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
tera = "1.17.1"
lazy_static = "1.4.0"
futures = "0.3.25"
async-process = "1.6.0"
futures-lite = "1.12.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
